--- a/styles/register.css
+++ b/styles/register.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.sectionPlanes{
+    display: flex;
+}
+
 /* form {
     display: flex;
     justify-content: center;
