--- a/styles/recuperar__contra.css
+++ b/styles/recuperar__contra.css
@@ -6,15 +6,39 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-        background-color: rgb(16, 16, 16);
+
+main {
+   margin: 0;
+    background: linear-gradient(to bottom, #000000 0%, #1a1a1a 100%);
+    background-color: #000;
+    color: white;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.header{
-    background-color: black;
-    position: fixed;
-    width: 100%;
-    height: auto;
+header{
+    height: 10vh;
+    margin: 0;
+    background-color: #000;
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0) 0px 8px 24px;
+    padding: 20px 60px 0px 60px;
+}
+
+
+
+footer {
+    background: linear-gradient(to top, #000000 0%, #1a1a1a 100%);
+    background-color: #000;
+    height: 10vh;   
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header .headerimg{
