--- a/styles/register.css
+++ b/styles/register.css
@@ -182,6 +182,7 @@ span {
     border-radius: 0.5em;
     color: black;
     border: none;
+    cursor: pointer;
 }
 
 .boton:hover {
@@ -190,6 +191,11 @@ span {
 
 .boton:active {
     background-color: rgb(242, 239, 245);
+}
+
+.boton a {
+    text-decoration: none;
+    color: black;
 }
 
 /* Botones de confirmacion o cancelar */
