--- a/styles/headerYFooter.css
+++ b/styles/headerYFooter.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+}
+
 header {
     display: flex;
     padding: 20px;
