Cambio de background en registro

--- a/styles/register.css
+++ b/styles/register.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: #1d1824;                                /*COLOR DEL BODY #1d1824*/
+    background: #000000;                                /*COLOR DEL BODY #1d1824*/
 }
 
 .main {
