--- a/styles/headerYFooter.css
+++ b/styles/headerYFooter.css
@@ -29,9 +29,52 @@ header a {
 footer {
     background: linear-gradient(to top, #000000 0%, #1a1a1a 100%);
     background-color: #000;
-    height: 10vh;   
     color: white;
     display: flex;
-    align-items: center;
-    justify-content: center;
+   justify-content: space-between;
+   align-items: start;
+  height: 10vh;
+  padding: 0px 10% 0px 10%;
+}
+
+.alumnos ul {
+    list-style: none;
+    color: white;
+    font-size: 16px;
+}
+
+
+
+.icono {
+    background-color: #3f414b;
+    border-radius: 50%;
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.facebook:hover {
+    background-color: rgb(51, 51, 250);
+}
+
+.twitter:hover {
+    background-color: rgb(49, 149, 241);
+}
+
+.instagram:hover {
+    background-color: rgb(255, 48, 117);
+}
+
+.linkedin:hover {
+    background-color: rgb(51, 51, 250);
+}
+
+
+
+
+.contenedor-redes {
+    display: flex;
+    gap: 20px;
+
 }
