--- a/styles/register.css
+++ b/styles/register.css
@@ -11,6 +11,15 @@ body {
     height: 100vh;
 }
 
+.header {
+    display: block;
+}
+
+.header ul {
+    display: flex;
+    justify-content: space-around;
+}
+
 .main {
     display: flex;
     flex-direction: column;
