--- a/styles/main.css
+++ b/styles/main.css
@@ -24,53 +24,33 @@ main {
 
 }
 
-.filter-categoria .search-container{
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 0.438rem;
-    margin-top: 0.125rem;
-}
-
-.filter-categoria .search-container .search{
-    width: 18.75rem;
-    padding: 0.5rem;
-}
-
-.filter-categoria .search-container .search-icon{
-    width: 2.188rem;
-}
-
 .dropdown-container{
     margin-top: 9rem;
     position: relative;
     width: fit-content;
-    z-index: 1;
 }
 
 .dropdown-container .dropdown-link{
     display: inline-block;
-    text-decoration: none;
     background-color: rgb(37, 38, 43);
-    color: white;
     padding: 0.7rem 1.2rem;
     border-radius: 0.313rem;
     border: solid; 
     border-color: rgb(71, 75, 78);
 }
 
+.filter-categoria .dropdown-container .arrow{
+    width: 1rem;
+    height: 1rem;
+}
+
 .dropdown-container .dropdown-content{
-    width: 31.25rem;
     display: none;
     flex-direction: column;
-    width: fit-content;
     background-color: beige;
     border-radius: 0.313rem;
-    position: absolute;
-    top: 100%;
+    position: absolute; /* VER */
     left: 51.5%;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-    overflow: hidden;
 }
 
 .dropdown-container:hover .dropdown-content{
@@ -87,10 +67,24 @@ main {
     width: 6.25rem;
     text-decoration: none;
     font-size: 0.75rem;
-    position: 1rem;
     color: white;
     background-color: gray;
-    transition: color 0.2s ease-in;  
+}
+
+.filter-categoria .search-container{
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 0.438rem;
+    margin-top: 0.125rem;
+}
+
+.filter-categoria .search-container .search{
+    width: 18.75rem;
+    padding: 0.5rem;
+}
+
+.filter-categoria .search-container .search-icon{
+    width: 2.188rem;
 }
 
 .h2-destacados{
@@ -98,22 +92,18 @@ main {
     font-size: 2.5rem;
 }
 
-.filter-categoria .dropdown-container .arrow{
-    width: 1rem;
-    height: 1rem;
-}
 
 .content{
+    margin-top: 5rem;
     display: grid;
     grid-template-columns: 26% 26% 26% 26%;
-    
+    grid-row-gap: 5rem;
 }
 
 .content .img{
     padding: 1rem;
     border: solid;
     border-color: gray;
-    margin-top: 5rem;
     width: 20rem;
     height: 26rem;
 }
