--- a/styles/info-series.css
+++ b/styles/info-series.css
@@ -208,6 +208,70 @@ main {
     display: none;
   }
 
+  @media (max-width: 1024px) {
+
+    .pelicula-hero .peli-bg{
+      height: 123%;
+  }
+
+    .pelicula-detalles{
+      margin-left: -2rem;
+      margin-top: 9rem;
+    }
+
+    .ifremaContenedor{
+      display: none;
+    }
+
+    .temporada-capitulo-movil{
+      display: flex;
+    }
+
+    .btn-verAhora-Movil{
+      display: none;
+    }
+
+    .temporadas-movil{
+      display: none;
+    }
+
+    .capitulos-movil{
+      display: none;
+    }
+
+    .btn-comprar-movil{
+      display: none;
+    }
+
+    .ifremaContenedor-movil{
+      display: flex;
+      height: 27vh;
+    }
+
+    .pelicula{
+      margin-top: 8rem;
+    }
+
+    .similares{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 2.5rem;
+    }
+
+    .pelicula_descripcion-detallada{
+      display: flex;
+      flex-direction: column;
+  }
+
+  .titulo-pelicula_recomendada{
+    margin-top: 0.5rem;
+  }
+
+  p{
+    margin-bottom: 2rem;
+  }
+  }
+
   @media (max-width: 425px) {
 
   .pelicula-hero {
@@ -248,6 +312,10 @@ main {
   }
 
   .temporada-capitulo{
+    display: none;
+  }
+
+  .ifremaContenedor{
     display: none;
   }
 
