--- a/styles/headerYFooter.css
+++ b/styles/headerYFooter.css
@@ -13,25 +13,28 @@ header {
   z-index: 9999;
   opacity: 0.8;
     display: flex;
-    padding: 20px;
+    padding: 1.25rem;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 60px 0px 60px;
+    padding: 0rem 3.75rem 0rem 3.75rem;
     background-color: #000;
-    box-shadow: rgba(0, 0, 0, 0) 0px 8px 24px;
+    box-shadow: rgba(0, 0, 0, 0) 0rem .5rem 1.5rem;
     color: white;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: bold;
     height: 10vh;
     margin: 0;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 100vw;
     
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .activo {
@@ -50,14 +53,16 @@ footer {
     display: flex;
    justify-content: space-between;
    align-items: start;
-  height: 10vh;
-  padding: 0px 10% 0px 10%;
+  min-height: 10vh;
+  padding: 0rem 10% 0rem 10%;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .alumnos ul {
     list-style: none;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 
@@ -65,9 +70,9 @@ footer {
 .icono {
     background-color: #3f414b;
     border-radius: 50%;
-    padding: 10px;
-    width: 40px;
-    height: 40px;
+    padding: .625rem;
+    width: 2.5rem;
+    height: 2.5rem;
     cursor: pointer;
 }
 
@@ -92,10 +97,22 @@ footer {
 
 .contenedor-redes {
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 
 }
 
 .main-login {
-    padding-top: 150px;
+    padding-top: 9.375rem;
+}
+
+
+
+
+@media screen and (width<490px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
 }
