--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -8,8 +8,9 @@
 
 
 p.p-desc {
-    font-size: 18px;
-    width: 600px;
+    font-size: 1.125rem;
+    width: 100%;
+    max-width: 37.5rem;
     text-align: center;
 }
 
@@ -30,8 +31,8 @@ main.main-login {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    gap: 10px;
+    margin-bottom: 1.25rem;
+    gap: .625rem;
 }
 
   
@@ -48,15 +49,15 @@ form{
     align-items: center;
     justify-content: center;
     height: 30vh;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 form.form-login {
     background-color: #25262B;
-    border-radius: 5px;
-    width: 600px;
-    height: 300px;
-    padding: 200px;
+    border-radius: .3125rem;
+    max-width: 37.5rem;
+    height: 18.75rem;
+    padding: 12.5rem;
 }
 
 
@@ -65,17 +66,17 @@ form.form-login {
 .inputs {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.875rem;
 }
 
 .datos {
     display: flex;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 .datos.datos-login {
     flex-direction: column;
-    gap: 0px;
+    gap: 0rem;
     width: 100%;
 
     label {
@@ -83,11 +84,11 @@ form.form-login {
     }
 
     input {
-        width: 500px;
-        padding: 10px;
+        width: 31.25rem;
+        padding: .625rem;
         background-color: #1C1D21;
-        border: 1px solid #474B4E;
-        margin-top: 7px;
+        border: .0625rem solid #474B4E;
+        margin-top: .4375rem;
     }
 }
 
@@ -98,14 +99,14 @@ form.form-login {
 }
 
 .datos input {
-    width: 200px;
-    padding: 5px;
+    width: 12.5rem;
+    padding: .3125rem;
     align-self: baseline;
     justify-self: baseline;
 }
 
 .datos label {
-    width: 120px;
+    width: 7.5rem;
     align-self: baseline;
     justify-self: baseline;
     font-weight: 600;
@@ -118,32 +119,32 @@ button a {
 
 .buttons {
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .buttons button {
-    padding: 7px;
-    width: 130px;
-    gap: 10px;
+    padding: .4375rem;
+    width: 8.125rem;
+    gap: .625rem;
     border: none;
-    border-radius:5px;
+    border-radius:.3125rem;
     cursor: pointer;
 }
 
 .h1-title {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .finalizar {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
     align-items: start;
     justify-content: start;
-    width: 500px;
-    margin-top: 10px;
+    max-width: 31.25rem;
+    margin-top: .625rem;
 }
 
 
@@ -152,9 +153,9 @@ button a {
 }
 
 button.btn-send.login {
-    width: 150px;
-    height: 48px;
-    border-radius: 5px;
+    width: 9.375rem;
+    height: 3rem;
+    border-radius: .3125rem;
     font-weight: 600;
 }
 
@@ -164,12 +165,42 @@ button.btn-send.login:hover {
 
 
 .header-img {
-    border: 1px solid black;
+    border: .0625rem solid black;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 250px;
-    border-radius: 15px;
-    margin: 20px;
+    height: 15.625rem;
+    border-radius: .9375rem;
+    margin: 1.25rem;
 }
 
+
+
+@media screen and (width<768px){
+.finalizar {
+    align-items: center;
+}
+
+form.form-login {
+    width: 100%;
+    max-width: 37.5rem;
+}
+
+form.form-login input {
+    width: 100%;
+    max-width:10rem ;
+}
+
+main {
+    justify-content: center;
+}
+
+}
+
+@media screen and (width<500px) {
+    form.form-login {
+        width: 15rem;
+        padding: 0px;
+    }
+
+}
