--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -36,6 +36,7 @@ main.main-login {
 }
 
 
+
 form {
     display: flex;
     flex-direction: column;
@@ -77,7 +78,8 @@ form.form-login {
     }
 
     input {
-        width: 31.25rem;
+        width: 100%;
+        max-width: 31.25rem;
         padding: .625rem;
         background-color: #1C1D21;
         border: .0625rem solid #474B4E;
@@ -134,6 +136,7 @@ button a {
     gap: 1.25rem;
     align-items: start;
     justify-content: start;
+    width: 100%;
     max-width: 31.25rem;
     margin-top: .625rem;
 }
@@ -175,6 +178,7 @@ button.btn-send.login:hover {
 form.form-login {
     width: 100%;
     max-width: 37.5rem;
+    padding: 0;
 }
 
 form.form-login input {
@@ -187,4 +191,3 @@ main {
 }
 
 }
-
