Cambio en footer

--- a/styles/headerYFooter.css
+++ b/styles/headerYFooter.css
@@ -117,3 +117,9 @@ footer {
         gap: 16px;
     }
 }
+
+@media screen and (width<710px) {
+     footer {
+        justify-content: center;
+    }
+}
